<resources>
    <string name="app_name">What\'sForDinner</string>
    <string name="meals">Meals</string>
    <string name="recipes">Recipes</string>
    <string name="groceries">Groceries</string>
    <string name="new_dish">New Dish</string>
    <string name="recipe_hint">Enter Recipe Name</string>
    <string name="ingredients">Ingredients</string>
    <string name="ingredient">Ingredient</string>
    <string name="directions">Directions</string>
    <string name="grocery_title">Grocery Shopping</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="add_image">Add Image</string>
    <string name="submit">Submit</string>
    <string name="url">Enter URL</string>
    <string name="download">Download</string>
    <string name="cancel">Cancel</string>
    <string name="eating_out">Eating out</string>
    <string name="url_info">URL: seanschlaefli.com</string>
    <string name="version">Version: </string>
    <string name="copyright">Copyright: </string>
    <string name="author">Developed by Sean Schlaefli</string>
    <string name="duplicate_recipe">You already have a recipe with this name!</string>
    <string name="ingredient_format_msg">Ingredient format: quantity units name\n1/4 cup flour\n2 pieces chicken breast</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>
    <string name="weekly_meals">Weekly Meals</string>
    <string name="local_file">Enter Local File Path</string>
    <string name="add_file">Add File</string>
    <string name="clear_meals">Removed all meals\nVisit the recipe screen to add more</string>
    <string name="save_meals">Weekly meals have been saved</string>
    <string name="select_error">This meal is not available</string>
    <string name="ingredient_format">format: quantity units name</string>
</resources>
