<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="150dp"
    android:minWidth="300dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">

        <EditText
            android:id="@+id/download_edit_text"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/url"
            android:inputType="textUri"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal
"
            />

            <Button
                android:id="@+id/download_button_id"
                android:layout_width="110dp"
                android:layout_height="40dp"
                android:onClick="doDownload"
                android:text="@string/download"
                android:layout_gravity="center_horizontal"/>

        <EditText
            android:id="@+id/local_file_edit_text"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/local_file"
            android:inputType="textUri"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            />

        <Button
            android:id="@+id/local_button_id"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:onClick="doLocalFile"
            android:text="@string/add_file"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:id="@+id/cancel_button_id"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:onClick="doCancel"
            android:text="@string/cancel"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>
</FrameLayout>