<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/meals_image_view"
        android:layout_width="126dp"
        android:layout_height="100dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/meals"
        android:onClick="doMeals"
        app:layout_constraintBottom_toTopOf="@+id/groceries_image_view"
        app:layout_constraintEnd_toStartOf="@+id/recipes_image_view"
        app:layout_constraintHorizontal_bias="0.226"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_image_view"
        app:layout_constraintVertical_bias="0.046"
        app:srcCompat="@drawable/ic_dates" />

    <ImageView
        android:id="@+id/app_image_view"
        android:layout_width="371dp"
        android:layout_height="166dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/app_name"
        android:onClick="doAppInfo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@mipmap/ic_main_banner" />

    <ImageView
        android:id="@+id/groceries_image_view"
        android:layout_width="126dp"
        android:layout_height="100dp"
        android:layout_marginBottom="88dp"
        android:layout_marginStart="24dp"
        android:contentDescription="@string/groceries"
        android:onClick="doGroceries"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_shopping_cart" />

    <ImageView
        android:id="@+id/recipes_image_view"
        android:layout_width="126dp"
        android:layout_height="100dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/recipes"
        android:onClick="doRecipes"
        app:layout_constraintBottom_toTopOf="@+id/dish_image_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_image_view"
        app:layout_constraintVertical_bias="0.046"
        app:srcCompat="@drawable/ic_recipes" />

    <ImageView
        android:id="@+id/dish_image_view"
        android:layout_width="124dp"
        android:layout_height="100dp"
        android:layout_marginBottom="88dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/new_dish"
        android:onClick="doDishes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.714"
        app:layout_constraintStart_toEndOf="@+id/groceries_image_view"
        app:srcCompat="@drawable/ic_add" />

    <TextView
        android:id="@+id/meals_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/meals"
        android:onClick="doMeals"
        android:text="@string/meals"
        android:textAlignment="center"
        android:textColor="?attr/colorPrimaryDark"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/groceries_image_view"
        app:layout_constraintEnd_toStartOf="@+id/recipes_text_view"
        app:layout_constraintHorizontal_bias="0.279"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meals_image_view"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/recipes_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="56dp"
        android:contentDescription="@string/recipes"
        android:onClick="doRecipes"
        android:text="@string/recipes"
        android:textAlignment="center"
        android:textColor="?attr/colorPrimaryDark"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/dish_image_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipes_image_view"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/groceries_text_view"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="28dp"
        android:contentDescription="@string/groceries"
        android:onClick="doGroceries"
        android:text="@string/groceries"
        android:textAlignment="center"
        android:textColor="?attr/colorPrimaryDark"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groceries_image_view"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/dish_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/new_dish"
        android:onClick="doDishes"
        android:text="@string/new_dish"
        android:textAlignment="center"
        android:textColor="?attr/colorPrimaryDark"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.918"
        app:layout_constraintStart_toEndOf="@+id/groceries_text_view"
        app:layout_constraintTop_toBottomOf="@+id/dish_image_view"
        app:layout_constraintVertical_bias="0.0" />
</android.support.constraint.ConstraintLayout>