<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DishActivity">

    <EditText
        android:id="@+id/recipe_name_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:padding="5dp"
        android:ems="10"
        android:hint="@string/recipe_hint"
        android:background="@drawable/stroke_bg_light_black"
        android:inputType="textCapWords|textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/recipe_image_view"
        android:layout_width="70dp"
        android:layout_height="64dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="112dp"
        android:contentDescription="@string/recipe_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_cookie_bite"/>

    <ImageButton
        android:id="@+id/add_image_button"
        android:layout_width="54dp"
        android:layout_height="49dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="124dp"
        android:background="@drawable/ic_add"
        android:contentDescription="@string/add_image"
        android:onClick="doAddImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/recipe_image_view"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="358dp"
        android:layout_height="208dp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/stroke_bg_light_black"
        android:isScrollContainer="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipe_image_view"
        app:layout_constraintVertical_bias="0.109">

        <TableLayout
            android:id="@+id/table_layout_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:paddingBottom="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            android:paddingTop="10dp">

            <TableRow>

                <EditText
                    android:id="@+id/ingredients_row_1_id"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="5"
                    android:background="@drawable/stroke_bg_light_black"
                    android:hint="@string/ingredient"
                    android:paddingBottom="10dp"
                    android:paddingStart="10dp"
                    android:paddingTop="10dp"
                    android:textSize="12sp" />

                <Spinner
                    android:id="@+id/ingredients_spinner_1_id"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp" />

            </TableRow>

            <TableRow>

                <EditText
                    android:id="@+id/ingredients_row_2_id"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="5"
                    android:background="@drawable/stroke_bg_light_black"
                    android:hint="@string/ingredient"
                    android:paddingBottom="10dp"
                    android:paddingStart="10dp"
                    android:paddingTop="10dp"
                    android:textSize="12sp" />

                <Spinner
                    android:id="@+id/ingredients_spinner_2_id"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp" />

            </TableRow>

            <TableRow>

                <EditText
                    android:id="@+id/ingredients_row_3_id"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="5"
                    android:background="@drawable/stroke_bg_light_black"
                    android:hint="@string/ingredient"
                    android:paddingBottom="10dp"
                    android:paddingStart="10dp"
                    android:paddingTop="10dp"
                    android:textSize="12sp" />

                <Spinner
                    android:id="@+id/ingredients_spinner_3_id"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp" />

            </TableRow>

            <TableRow>

                <EditText
                    android:id="@+id/ingredients_row_4_id"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="5"
                    android:background="@drawable/stroke_bg_light_black"
                    android:hint="@string/ingredient"
                    android:paddingBottom="10dp"
                    android:paddingStart="10dp"
                    android:paddingTop="10dp"
                    android:textSize="12sp" />

                <Spinner
                    android:id="@+id/ingredients_spinner_4_id"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp" />

            </TableRow>

            <TableRow>

                <EditText
                    android:id="@+id/ingredients_row_5_id"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="5"
                    android:background="@drawable/stroke_bg_light_black"
                    android:hint="@string/ingredient"
                    android:paddingBottom="10dp"
                    android:paddingStart="10dp"
                    android:paddingTop="10dp"
                    android:textSize="12sp" />

                <Spinner
                    android:id="@+id/ingredients_spinner_5_id"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp" />

            </TableRow>

            <TableRow>

                <EditText
                    android:id="@+id/ingredients_row_6_id"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="5"
                    android:background="@drawable/stroke_bg_light_black"
                    android:hint="@string/ingredient"
                    android:paddingBottom="10dp"
                    android:paddingStart="10dp"
                    android:paddingTop="10dp"
                    android:textSize="12sp" />

                <Spinner
                    android:id="@+id/ingredients_spinner_6_id"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp" />

            </TableRow>

            <TableRow>

                <EditText
                    android:id="@+id/ingredients_row_7_id"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="5"
                    android:background="@drawable/stroke_bg_light_black"
                    android:hint="@string/ingredient"
                    android:paddingBottom="10dp"
                    android:paddingStart="10dp"
                    android:paddingTop="10dp"
                    android:textSize="12sp" />

                <Spinner
                    android:id="@+id/ingredients_spinner_7_id"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp" />

            </TableRow>

            <TableRow>

                <EditText
                    android:id="@+id/ingredients_row_8_id"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="5"
                    android:background="@drawable/stroke_bg_light_black"
                    android:hint="@string/ingredient"
                    android:paddingBottom="10dp"
                    android:paddingStart="10dp"
                    android:paddingTop="10dp"
                    android:textSize="12sp" />

                <Spinner
                    android:id="@+id/ingredients_spinner_8_id"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp" />

            </TableRow>

            <TableRow>

                <EditText
                    android:id="@+id/ingredients_row_9_id"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="5"
                    android:background="@drawable/stroke_bg_light_black"
                    android:hint="@string/ingredient"
                    android:paddingBottom="10dp"
                    android:paddingStart="10dp"
                    android:paddingTop="10dp"
                    android:textSize="12sp" />

                <Spinner
                    android:id="@+id/ingredients_spinner_9_id"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp" />

            </TableRow>

            <TableRow>

                <EditText
                    android:id="@+id/ingredients_row_10_id"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="5"
                    android:background="@drawable/stroke_bg_light_black"
                    android:hint="@string/ingredient"
                    android:paddingBottom="10dp"
                    android:paddingStart="10dp"
                    android:paddingTop="10dp"
                    android:textSize="12sp" />

                <Spinner
                    android:id="@+id/ingredients_spinner_10_id"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp" />

            </TableRow>
        </TableLayout>
    </ScrollView>

    <EditText
        android:id="@+id/directions_edit_text"
        android:layout_width="321dp"
        android:layout_height="80dp"
        android:layout_marginBottom="56dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:maxLength="250"
        android:background="@drawable/stroke_bg_black"
        android:contentDescription="@string/directions"
        android:ems="10"
        android:hint="Enter Directions (Limit 250 Characters)"
        android:inputType="textMultiLine|textPersonName"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/submit_button_id"
        android:layout_width="92dp"
        android:layout_height="41dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/submit"
        android:onClick="doSubmit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/directions_edit_text" />

</android.support.constraint.ConstraintLayout>